--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "./resource/js/trisoap.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +26,7 @@
     "file-loader": "^1.1.6",
     "gulp": "^3.9.1",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.10",
     "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
