--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.0",
+    "gulp-clean-css": "^3.9.2",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.10",
